<resources>
    <string name="app_name">Food App</string>
    <string name="taomlar">taomlar</string>
    <string name="taomlar1">Taomlar</string>
    <string name="taom_tayyorlash_tartibi">Taom tayyorlash tartibi</string>
    <string name="kerakli_mahsulot">Kerakli mahsulot</string>
    <string name="taom_nomi">Taom nomi</string>
    <string name="save">Save</string>
    <string name="kerakli_mahsulotlar">Kerakli mahsulotlar</string>
    <string name="taom">Taom tayyorlash tartibi</string>
    <string name="taom_tayyorlash">Taom tayyorlash tartibi</string>
    <string name="tayyorlash_tartibi">Taom tayyorlash tartibi</string>
    <string name="mahsulotlar">Kerakli mahsulotlar</string>
    <string name="kli_mahsulotlar">Kerakli mahsulotlar</string>
</resources>